--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "example": "examples"
   },
   "scripts": {
-    "lint": "eslint convert.js",
+    "lint": "eslint src/convert.js",
+    "build": "babel src -d dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -27,5 +28,9 @@
     "node-cmd": "^1.1.1",
     "vdom-to-html": "^2.2.0",
     "virtual-dom": "^2.1.1"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.6.5",
+    "babel-preset-es2015": "^6.6.0"
   }
 }
