--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "example": "examples"
   },
   "scripts": {
-    "lint": "eslint src/convert.js",
+    "lint": "eslint {src,Native}/*.js",
     "build": "babel src -d dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
