--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   },
   "homepage": "https://github.com/adelgado/elm-prerender.git#readme",
   "dependencies": {
+    "command-line-args": "^2.1.6",
+    "command-line-tool": "git+https://github.com/75lb/command-line-tool.git#4228c5d3d1f5bf894046c835c97755eb8c05a1c5",
+    "command-line-usage": "^2.0.3",
     "cross-spawn": "^2.1.5",
     "glob": "^7.0.3",
     "n-readlines": "^0.2.2",
