--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -10,6 +10,7 @@ parserOptions:
 rules:
   indent: [warn, tab]
   linebreak-style: [warn, unix]
+  no-undef: [warn]
   no-unused-vars: [warn]
   quotes: [warn, single]
   semi: [warn, never]
