--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "example": "examples"
   },
   "scripts": {
-    "lint": "eslint {src,Native}/*.js",
+    "lint": "eslint {src,Native,test}/*.js",
     "build": "babel src -d dist",
     "test": "mocha --compilers js:babel-register"
   },
