--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -10,6 +10,7 @@ parserOptions:
 rules:
   arrow-parens: [1, as-needed]
   camelcase: 1
+  eqeqeq: [1, smart]
   indent: [1, tab]
   linebreak-style: [1, unix]
   max-len: [1, 80]
